--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql:true
 #spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+spring.flyway.enabled=false
+server.port= 9090
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080
