--- a/ProductService/src/main/resources/application.properties
+++ b/ProductService/src/main/resources/application.properties
@@ -8,5 +8,7 @@ spring.jpa.show-sql:true
 #spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.flyway.enabled=false
-server.port= 9090
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080
+#server.port= 9090
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8080
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
